--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@
   <ul class="quick-links">
     <li><a href="https://github.com/igd-geo/mongomvcc/wiki">Documentation</a></li>
     <li><a href="https://github.com/igd-geo/mongomvcc/issues">Issues</a></li>
-    <li><a href="https://igd-geo.github.com/mongomvcc/api/current">API documentation (Javadoc)</a></li>
+    <li><a href="http://igd-geo.github.com/mongomvcc/api/current/">API documentation (Javadoc)</a></li>
   </ul>
   <ul class="github-links">
     <li>
