--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@
 <div class="span12">
   <div class="teaser">
     <h1>MongoMVCC</h1>
-    <p class="slogan">Implements the MVCC model on top of MongoDB</p>
+    <p class="slogan">Multiversion concurrency control (MVCC) on top of MongoDB</p>
   </div>
   <p class="download-info">
     <a href="https://github.com/igd-geo/mongomvcc/downloads" class="btn btn-primary btn-large">Download MongoMVCC</a>
