Migrated to ghbtns.com

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,10 +20,10 @@
   </ul>
   <ul class="github-links">
     <li>
-      <iframe class="github-btn" src="http://markdotto.github.com/github-buttons/github-btn.html?user=igd-geo&repo=mongomvcc&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="112px" height="20px"></iframe>
+      <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=igd-geo&repo=mongomvcc&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="112px" height="20px"></iframe>
     </li>
     <li>
-      <iframe class="github-btn" src="http://markdotto.github.com/github-buttons/github-btn.html?user=igd-geo&repo=mongomvcc&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="98px" height="20px"></iframe>
+      <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=igd-geo&repo=mongomvcc&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="98px" height="20px"></iframe>
     </li>
   </ul>
   </div>
